# Palette

./: Cargo.toml  README.md  requirements.txt
.github/workflows/: rust.yml
py_tools/: visual_octree.py
src/: main.rs
src/commands/: single.rs
src/core/: mod.rs
src/core/calculate/: get_dominant_colors.rs  mod.rs
src/core/calculate/octree/: mod.rs  point.rs  utils.rs  vec3.rs
src/core/file/: file_load.rs  mod.rs
src/core/image_decode/: decode.rs  image_decode.rs  image_raw.rs  mod.rs
src/core/image_parse/: image_parse.rs  mod.rs
src/core/pre_process/: config_model.rs  config_result.rs  mod.rs
src/core/scheduler/: channel_msg.rs  mod.rs  process_manager.rs  scheduler.rs  state.rs
src/utils/: file.rs  image.rs  log.rs  mod.rs  msg_const.rs  queue.rs  thread.rs
src/utils/debug_tools/: ppm.rs
src/utils/log/: events.rs  gui.rs  log.rs  mod.rs
tests/: example.json
