[package]
name = "palette"
version = "0.0.1"
authors = ["zhengrenzhe <zhengrenzhe.niujie@gmail.com>"]
edition = "2018"
description = "single-machine large-scale calculation of dominant color solution"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
mozjpeg = "0.8.24"
png = "0.16.8"
