[package]
name = "palette"
version = "0.0.1"
authors = ["zhengrenzhe <zhengrenzhe.niujie@gmail.com>"]
edition = "2018"
description = "single-machine large-scale calculation of dominant color solution"

[dependencies]
clap = "2.33.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
colored = "2.0.0"
glob = "0.3.0"
num_cpus = "1.13.0"
crossbeam = "0.8.0"
image = "0.23.14"
tui = "0.14.0"
termion = "1.5.6"
lazy_static = "1.4.0"
const_format = "0.2.14"
float-cmp = "0.8.0"

# for catch mozjpeg decode error
[profile.dev]
panic = "unwind"

# for catch mozjpeg decode error
[profile.release]
panic = "unwind"
